--- a/CoreMasterDetailsWithProcAndAggre/Views/Employee/Edit.cshtml
+++ b/CoreMasterDetailsWithProcAndAggre/Views/Employee/Edit.cshtml
@@ -4,37 +4,39 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<form asp-action="Edit" method="post" enctype="multipart/form-data">
+<form id="editForm" asp-action="Edit" method="post" enctype="multipart/form-data">
     <input type="hidden" asp-for="EmployeeId" />
     <div class="row">
         <div class="col-6">
             <h2>Edit Employee</h2>
-            <div class="form-group">
-                <label asp-for="Name"></label>
+            <div class="form-group mb-3">
+                <label asp-for="Name" class="form-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="IsActive"></label>
-                <input asp-for="IsActive" class="form-control" type="checkbox" />
-                <span asp-validation-for="IsActive" class="text-danger"></span>
+            <div class="form-group mb-3">
+                <label asp-for="IsActive" class="form-label"></label>
+                <div class="form-check">
+                    <input asp-for="IsActive" class="form-check-input" type="checkbox" />
+                    <span asp-validation-for="IsActive" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="JoinDate"></label>
+            <div class="form-group mb-3">
+                <label asp-for="JoinDate" class="form-label"></label>
                 <input asp-for="JoinDate" class="form-control" />
                 <span asp-validation-for="JoinDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ImageFile"></label>
-                <input asp-for="ImageFile" type="file" class="form-control-file" />
+            <div class="form-group mb-3">
+                <label asp-for="ImageFile" class="form-label"></label>
+                <div class="custom-file">
+                    <input asp-for="ImageFile" type="file" class="custom-file-input" id="customFile" onchange="document.getElementById('PreviewPhoto').src = window.URL.createObjectURL(this.files[0])" />
+                    <label class="custom-file-label" for="customFile">Choose file</label>
+                </div>
+                <img id="PreviewPhoto" src="@Model.ImageUrl" alt="Current Image" class="mt-2 border" style="width: 125px; height: 125px;" />
                 <span asp-validation-for="ImageFile" class="text-danger"></span>
-                @if (!string.IsNullOrEmpty(Model.ImageUrl))
-                {
-                    <img src="@Model.ImageUrl" alt="Current Image" width="100" />
-                }
             </div>
-            <div class="form-group">
-                <label asp-for="Salary"></label>
+            <div class="form-group mb-3">
+                <label asp-for="Salary" class="form-label"></label>
                 <input asp-for="Salary" class="form-control" />
                 <span asp-validation-for="Salary" class="text-danger"></span>
             </div>
@@ -43,19 +45,18 @@
         </div>
         <div class="col-6">
             <h3>Experiences</h3>
-
             <div id="experienceList">
                 @for (int i = 0; i < Model.Experiences.Count; i++)
                 {
-                    <div class="form-group experience-item">
+                    <div class="form-group experience-item mb-3">
                         <div class="row">
                             <div class="col-4">
-                                <label asp-for="@Model.Experiences[i].Title"></label>
+                                <label asp-for="@Model.Experiences[i].Title" class="form-label"></label>
                                 <input asp-for="@Model.Experiences[i].Title" class="form-control" />
                                 <span asp-validation-for="@Model.Experiences[i].Title" class="text-danger"></span>
                             </div>
                             <div class="col-4">
-                                <label asp-for="@Model.Experiences[i].Duration"></label>
+                                <label asp-for="@Model.Experiences[i].Duration" class="form-label"></label>
                                 <input asp-for="@Model.Experiences[i].Duration" class="form-control" />
                                 <span asp-validation-for="@Model.Experiences[i].Duration" class="text-danger"></span>
                             </div>
@@ -66,42 +67,62 @@
                     </div>
                 }
             </div>
-
-            <button type="button" class="btn btn-secondary" onclick="addExperience()">Add Experience</button>
+            <div class="text-center">
+                <button type="button" class="btn btn-secondary" onclick="addExperience()">Add Experience</button>
+            </div>
         </div>
     </div>
-
-    <br /><br />
 </form>
 
 @section Scripts {
+    <script src="~/jquery/jquery.min.js"></script>
     <script>
         function addExperience() {
             var index = $('#experienceList .experience-item').length;
             var newExperience = `
-                        <div class="form-group experience-item">
-                            <div class="row">
-                                <div class="col-4">
-                                    <label for="Experiences_${index}__Title">Title</label>
-                                    <input name="Experiences[${index}].Title" class="form-control" />
-                                    <span class="text-danger"></span>
-                                </div>
-                                <div class="col-4">
-                                    <label for="Experiences_${index}__Duration">Duration</label>
-                                    <input name="Experiences[${index}].Duration" class="form-control" />
-                                    <span class="text-danger"></span>
-                                </div>
-                                <div class="col-4">
-                                    <button type="button" class="btn btn-danger remove-experience">Remove</button>
-                                </div>
+                    <div class="form-group experience-item mb-3" data-index="${index}">
+                        <div class="row">
+                            <div class="col-4">
+                                <label for="Experiences_${index}__Title" class="form-label">Title</label>
+                                <input name="Experiences[${index}].Title" class="form-control" />
+                                <span class="text-danger"></span>
                             </div>
-                        </div>`;
+                            <div class="col-4">
+                                <label for="Experiences_${index}__Duration" class="form-label">Duration</label>
+                                <input name="Experiences[${index}].Duration" class="form-control" />
+                                <span class="text-danger"></span>
+                            </div>
+                            <div class="col-4">
+                                <button type="button" class="btn btn-danger remove-experience">Remove</button>
+                            </div>
+                        </div>
+                    </div>`;
             $('#experienceList').append(newExperience);
         }
 
         // Event delegation to handle the click event on dynamically added "Remove" buttons
         $(document).on('click', '.remove-experience', function () {
             $(this).closest('.experience-item').remove();
+            updateExperienceIndices();
         });
+
+        function updateExperienceIndices() {
+            $('#experienceList .experience-item').each(function (index) {
+                $(this).attr('data-index', index);
+                $(this).find('input, label').each(function () {
+                    var nameAttr = $(this).attr('name');
+                    var forAttr = $(this).attr('for');
+                    if (nameAttr) {
+                        var newName = nameAttr.replace(/\d+/, index);
+                        $(this).attr('name', newName);
+                    }
+                    if (forAttr) {
+                        var newFor = forAttr.replace(/\d+/, index);
+                        $(this).attr('for', newFor);
+                    }
+                });
+            });
+        }
     </script>
+
 }
